# RFoF_module

./: README.md
examples/: python_combined.ipynb
module-drivers/: .gitignore  .gitlab-ci.yml  Cargo.toml  flake.nix  pyproject.toml
module-drivers/examples/: ftdi_combined.rs  ftdi_frx.rs  ftdi_ftx.rs
module-drivers/src/: lib.rs  python.rs
module-drivers/src/modules/: frx.rs  ftx.rs  mod.rs
module-drivers/src/peripherals/: atten.rs  mod.rs
module-drivers/src/peripherals/adc/: frx.rs  ftx.rs  mod.rs
notebooks/: apr16_18_30_trx_pam_test.ipynb  may2_trx_fem_test.ipynb  may30June6_eigsep_front_end.ipynb  may30_eigsep_front_end.ipynb
notebooks/.ipynb_checkpoints/: may30_eigsep_front_end-checkpoint.ipynb
scripts/: transmitter.py
src/: python.rs
src/peripherals/: digipot.rs
src/peripherals/adc/: driver.rs
src/peripherals/temp/: mod.rs  regs.rs
