[project]
name = "rfof"
description = "Python wrappers for dsa-2000 rfof rust drivers"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
no-default-features = true
features = ["python"]
skip-auditwheel = false
